--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    
+     <!--vue-app是根容器-->
+    <div id="vue-app">
+        <h1>{{ greet("afternoon") }}</h1>
+        <p>Name: {{name}}</p>
+        <p>Job: {{job}}</p>
+        <a v-bind:href="website">链接</a>
+        <input type="text" v-bind:value="name">
+        <p v-html="websiteTag"></p>
+    </div>
 </body>
+<script src="index.js"></script>
 </html>
