--- a/创建vue.html
+++ b/创建vue.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>VueJs</title>
-    <link rel="stylesheet" href="index.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
@@ -17,5 +16,5 @@
         <p v-html="websiteTag"></p>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="创建vue.js"></script>
 </html>
