--- a/vue事件.html
+++ b/vue事件.html
@@ -16,8 +16,8 @@
         <button v-on:dblclick="add(10)">加1</button>
         <button v-on:dblclick="subtract(10)">减1</button>
 
-        <div id="cav" v-on:mousemove="updataXY">{{x}},{{y}}</div>
+        <div id="cav" v-on:mousemove="updataXY">test{{x}},{{y}}</div>
     </div>
 </body>
-<script src="vue事件.js"></script>
+<script src="vue事件.js"> </script>
 </html>
