--- a/字符串反转.html
+++ b/字符串反转.html
@@ -9,7 +9,7 @@
     <h1>字符串反转</h1>
     <div id="vue-app">
         <p>{{ message }}</p>
-    <input v-model="message">
+    <button v-on:click="reverseMessage">反转字符串</button>
 
     </div>
 
