--- a/多个vue.html
+++ b/多个vue.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="vue事件.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
@@ -20,5 +19,5 @@
             <button v-on:click="changeTitle">change app one</button>
     </div>
 </body>
-<script src="实战demo.js"> </script>
+<script src="多个vue.js"> </script>
 </html>
